--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 os: osx
+osx_image: xcode10.1
+addons:
+  homebrew:
+    update: true
 language: sh
 before_script: ./defaults.sh
 script: ./install.sh
